--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,7 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-        key:
-          - v1-dependencies-{{ checksum "requirements.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+        keys: [v1-dependencies{{ checksum "requirements.txt" }}, v1-dependencies-]
 
       - run:
         name: install dependencies
@@ -33,7 +30,7 @@ jobs:
       - save_cache:
         paths:
           - ./venv
-        key: v1-dependencies-{{ checksum "requirements.txt" }}
+        key: [v1-dependencies{{ checksum "requirements.txt" }}]
       
       # run lint!
       - run:
