--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,9 @@ jobs:
 
       # Download and cache dependencies
       - restore_cache:
-          keys: [v1-dependencies{{ checksum "requirements.txt" }}, v1-dependencies-]
+          keys:
+            - v1-dependencies-{{ checksum "requirements.txt" }}
+            - v1-dependencies-
 
       - run:
         name: install dependencies
@@ -30,7 +32,7 @@ jobs:
       - save_cache:
           paths:
             - ./venv
-          key: [v1-dependencies{{ checksum "requirements.txt" }}]
+          key: v1-dependencies{{ checksum "requirements.txt" }}
       
       # run lint!
       - run:
